sumo/tests/dfrouter/errors/network/edge/root__edge#id__empty1/errors.dfrouter
Error: An unknown edge occured within 'net.net.xml' (id='').
Quitting (on error).
